# pabi

./: .clang-tidy  .gitignore  .gitmodules  .ignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  WORKSPACE.bazel  build.rs  justfile  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: Bug.yml  Feature.yml  config.yml  feature.yml
.github/workflows/: audit.yaml  audit.yml  benchmarks.yaml  bloat.yaml  build.yaml  build.yml  ci.yml  coverage.yaml  coverage.yml  docs.yaml  docs.yml  lint.yaml  lint.yml  test.yaml  test.yml
aiseu/chess/: BUILD.bazel  bitboard.cc  bitboard.h  board.cc  board.h  chess_test.cc  game.cc  game.h  notation.cc  notation.h  pgn.h
aiseu/engine/: BUILD.bazel  book_openings.cc  book_openings.h  clock.cc  clock.h  driver.cc  evaluation.cc  evaluation.h
aiseu/interface/: uci.h
benches/: chess.rs  cycles.rs  dummy_benchmark.rs  perft.rs  position_parsing.rs  position_parsing_cycles.rs  time.rs
bibimbap/: CMakeLists.txt
bibimbap/chess/: CMakeLists.txt  bitboard.cc  bitboard.h  board.cc  board.h  game.cc  game.h  notation.cc  notation.h  pgn.h
bibimbap/engine/: CMakeLists.txt  book_openings.cc  book_openings.h  clock.cc  clock.h  driver.cc  evaluation.cc  evaluation.h
bibimbap/interface/: uci.h
brain/: README.md  pyproject.toml
brain/src/: assemble.py  data_reader.py  prepare_lc0_data.py  train.py
data/: README.md
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.From.js  trait.TryFrom.js  trait.TryInto.js
docs/implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/strum/: trait.IntoEnumIterator.js
docs/pabi/: all.html  constant.VERSION.html  fn.print_system_info.html  index.html  sidebar-items.js
docs/pabi/chess/: index.html  sidebar-items.js
docs/pabi/chess/attacks/: constant.BISHOP_ATTACKS.html  constant.BISHOP_ATTACKS_COUNT.html  constant.BISHOP_ATTACK_OFFSETS.html  constant.BISHOP_RAYS.html  constant.BISHOP_RELEVANT_OCCUPANCIES.html  constant.BLACK_LONG_CASTLE_KING_WALK.html  constant.BLACK_LONG_CASTLE_ROOK_WALK.html  constant.BLACK_PAWN_ATTACKS.html  constant.BLACK_SHORT_CASTLE_KING_WALK.html  constant.BLACK_SHORT_CASTLE_ROOK_WALK.html  constant.KING_ATTACKS.html  constant.KNIGHT_ATTACKS.html  constant.RAYS.html  constant.ROOK_ATTACKS.html  constant.ROOK_ATTACKS_COUNT.html  constant.ROOK_ATTACK_OFFSETS.html  constant.ROOK_RAYS.html  constant.ROOK_RELEVANT_OCCUPANCIES.html  constant.WHITE_LONG_CASTLE_KING_WALK.html  constant.WHITE_LONG_CASTLE_ROOK_WALK.html  constant.WHITE_PAWN_ATTACKS.html  constant.WHITE_SHORT_CASTLE_KING_WALK.html  constant.WHITE_SHORT_CASTLE_ROOK_WALK.html  fn.bishop_attacks.html  fn.bishop_ray.html  fn.king_attacks.html  fn.knight_attacks.html  fn.pawn_attacks.html  fn.pext.html  fn.queen_attacks.html  fn.ray.html  fn.rook_attacks.html  fn.rook_ray.html  index.html  sidebar-items.js  struct.AttackInfo.html
docs/pabi/chess/bitboard/: constant.LINE_SEPARATOR.html  constant.SQUARE_SEPARATOR.html  index.html  sidebar-items.js  struct.Bitboard.html  struct.BitboardIterator.html  struct.Board.html  struct.Pieces.html
docs/pabi/chess/core/: constant.BOARD_SIZE.html  constant.BOARD_WIDTH.html  constant.MAX_MOVES.html  enum.Direction.html  enum.File.html  enum.PieceKind.html  enum.Player.html  enum.Promotion.html  enum.Rank.html  enum.Square.html  index.html  sidebar-items.js  struct.CastleRights.html  struct.DirectionIter.html  struct.FileIter.html  struct.Move.html  struct.Piece.html  struct.RankIter.html  struct.SquareIter.html  type.MoveList.html
docs/pabi/chess/position/: fn.generate_bishop_moves.html  fn.generate_castle_moves.html  fn.generate_king_moves.html  fn.generate_knight_moves.html  fn.generate_pawn_moves.html  fn.generate_rook_moves.html  fn.perft.html  fn.validate.html  index.html  sidebar-items.js  struct.Position.html
docs/pabi/evaluation/: index.html  sidebar-items.js
docs/pabi/evaluation/evaluator/: index.html  sidebar-items.js  trait.Evaluator.html
docs/pabi/interface/: index.html  sidebar-items.js
docs/pabi/interface/uci/: fn.run.html  index.html
docs/pabi/util/: fn.sanitize_fen.html  index.html  sidebar-items.js
docs/src/pabi/: chess.rs.html  evaluation.rs.html  interface.rs.html  lib.rs.html  util.rs.html
docs/src/pabi/chess/: attacks.rs.html  bitboard.rs.html  core.rs.html  position.rs.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generate_moves.rs  parse_board.rs
scripts/: test.sh
src/: bitboard.rs  board.rs  build.rs  chess.rs  core.rs  engine.rs  environment.rs  evaluation.rs  interface.rs  lib.rs  main.rs  move.rs  perft.rs  uci.rs  util.rs
src/chess/: attacks.rs  bitboard.rs  core.rs  game.rs  generated.rs  mod.rs  move.rs  movegen.rs  moves.rs  position.rs  state.rs  transposition.rs  zobrist.rs  zobrist_keys.rs
src/engine/: mod.rs  openbench.rs  uci.rs
src/evaluation/: brain.rs  evaluator.rs  features.rs  material.rs  mod.rs  network.rs  pesto.rs  score.rs  trivial.rs
src/interface/: uci.rs
src/mcts/: environment.rs  mod.rs  search.rs  state.rs  tree.rs
src/search/: mcts.rs  minimax.rs  mod.rs  policy.rs  state.rs  transposition.rs  tree.rs
tests/: CMakeLists.txt  board.cc  chess.rs  integration.rs  move_generation.rs  position.rs  position_parsing.rs
tests/data/: README.md
tools/: Cargo.toml  README.md  download_lichess_games.py  pyproject.toml
tools/src/: data_reader.rs  lib.rs
training/: data_reader.py  filter.py  idx_to_move.py  prepare_lc0_data.py  ruff.toml  train.py  util.py
(+20 files in other folders)
