[package]
authors = ["Kirill Bobyrev <kbobyrev.opensource@gmail.com>"]
categories = ["command-line-interface"]
description = "Chess engine"
documentation = "https://docs.rs/pabi"
edition = "2021"
homepage = "https://github.com/kirillbobyrev/pabi"
keywords = ["chess", "engine", "machine-learning"]
license = "Apache-2.0"
name = "pabi"
readme = "README.md"
repository = "https://github.com/kirillbobyrev/pabi"
rust-version = "1.79"
version = "2024.6.16"
include = [
  "/src/",
  "/generated/",
  "/Cargo.toml",
  "/Cargo.lock",
  "build.rs",
  "LICENSE",
  "README.md",
] # Reduce the package size by only including things necessary for building it.

[lints.rust]
# Warn
absolute_paths_not_starting_with_crate = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
missing_docs = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
# Deny
keyword_idents = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unused_results = "deny"

[lints.clippy]
# Warn
cargo = "warn"
cognitive_complexity = "warn"
complexity = "warn"
correctness = "warn"
dbg_macro = "warn"
nursery = "warn"
pedantic = "warn"
style = "warn"
suspicious = "warn"
decimal_literal_representation = "warn"
# Deny
cargo_common_metadata = "deny"
doc_markdown = "deny"
equatable_if_let = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
inefficient_to_string = "deny"
linkedlist = "deny"
manual_assert = "deny"
needless_collect = "deny"
perf = "deny"
redundant_clone = "deny"
suboptimal_flops = "deny"
trivial_regex = "deny"
use_self = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_rust_codeblocks = "deny"
unescaped_backticks = "deny"

[workspace]
members = ["tools"]

[dependencies]
anyhow = "1.0.83"
arrayvec = "0.7.2"
bitflags = "2.2.1"
itertools = "0.13.0"
shadow-rs = "0.28.0"

[build-dependencies]
shadow-rs = "0.28.0"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = { version = "0.5.1", features = [
  "cargo_bench_support",
  "csv_output",
  "html_reports",
] }
iai = "0.1.1"
pretty_assertions = "1.1.0"
# Used for testing and comparing against a reasonable baseline for correctness.
shakmaty = "0.27.0"
predicates = "3.1.0"

[[bench]]
harness = false
name = "cycles"

[[bench]]
harness = false
name = "time"

# This is not the most perofrmmance-optimized profile. Use `fast` instead. Read
# BUILDING.md for more information.
[profile.release]
panic = "abort"
# Needed for cargo flamegraph.
debug = true

# TODO: Test this out once the benchmarks are available and tweak specific
# values. So far, this gives around -8% on parsing FEN/EPD positions.
[profile.fast]
debug = false
codegen-units = 1
inherits = "release"
lto = "fat"
strip = true
# TODO: Oh-oh, this is dangerous! Maybe measure if it gives any benefits.
# overflow-checks = false
# TODO: Tweak inline-threshold.
# TODO: Set profile-generate and profile-use (https://github.com/kirillbobyrev/pabi/issues/9).
