[package]
authors = ["Kirill Bobyrev <kbobyrev.opensource@gmail.com>"]
categories = ["command-line-interface"]
description = "Chess engine"
documentation = "https://docs.rs/pabi"
edition = "2021"
homepage = "https://github.com/kirillbobyrev/pabi"
keywords = ["chess", "engine", "machine-learning"]
license = "Apache-2.0"
name = "pabi"
readme = "README.md"
repository = "https://github.com/kirillbobyrev/pabi"
rust-version = "1.79"
version = "2024.6.16"
include = [
  "/src/",
  "/generated/",
  "/Cargo.toml",
  "/Cargo.lock",
  "build.rs",
  "LICENSE",
  "README.md",
] # Reduce the package size by only including things necessary for building it.

[lints.rust]
# Warn
# absolute_paths_not_starting_with_crate = "warn"
# let_underscore_drop = "warn"
# macro_use_extern_crate = "warn"
# missing_docs = "warn"
# unused_extern_crates = "warn"
# unused_import_braces = "warn"
# unused_lifetimes = "warn"
# unused_qualifications = "warn"
# Deny
# keyword_idents_2018 = "deny"
# keyword_idents_2024 = "deny"
# trivial_casts = "deny"
# trivial_numeric_casts = "deny"
# unreachable_pub = "deny"
# unused_results = "deny"

[lints.clippy]
# TODO: Gradually enable more and more warnings.
# Warn
# cargo = "warn"
# complexity = "warn"
# correctness = "warn"
# nursery = "warn"
# pedantic = "warn"
# style = "warn"
# suspicious = "warn"
# Deny
missing_transmute_annotations = { level = "allow", priority = -1 }
perf = "deny"

[lints.rustdoc]
# broken_intra_doc_links = "deny"
# invalid_rust_codeblocks = "deny"
# unescaped_backticks = "deny"

[dependencies]
anyhow = "1.0.83"
arrayvec = "0.7.2"
bitflags = "2.2.1"
itertools = "0.13.0"
shadow-rs = "0.29.0"

[build-dependencies]
rand = "0.8.5"
shadow-rs = "0.29.0"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = { version = "0.5.1", features = [
  "cargo_bench_support",
  "csv_output",
  "html_reports",
] }
predicates = "3.1.0"
pretty_assertions = "1.1.0"
shadow-rs = "0.29.0"
# Used for testing and comparing against a reasonable baseline for correctness.
shakmaty = "0.27.0"

[[bench]]
harness = false
name = "perft"

# TODO: Test this out once the benchmarks are available and tweak specific
# values. So far, this gives around -8% on parsing FEN/EPD positions.
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
# TODO: Tweak inline-threshold.
# TODO: Set profile-generate and profile-use (https://github.com/kirillbobyrev/pabi/issues/9).
