workspace(name = "aiseu")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# TODO(kirillbobyrev): Add hashes.
http_archive(
    name = "abseil",
    urls = ["https://github.com/abseil/abseil-cpp/archive/20200225.2.zip"],
    strip_prefix = "abseil-cpp-20200225.2",
)

http_archive(
     name = "googletest",
     urls = ["https://github.com/google/googletest/archive/release-1.10.0.zip"],
     strip_prefix = "googletest-release-1.10.0",
)

http_archive(
     name = "benchmark",
     urls = ["https://github.com/google/benchmark/archive/v1.5.0.zip"],
     strip_prefix = "benchmark-v1.5.0",
)
