workspace(name = "aiseu")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# TODO(kirillbobyrev): Add hashes.
http_archive(
     name = "gtest",
     urls = ["https://github.com/google/googletest/archive/release-1.10.0.zip"],
     strip_prefix = "googletest-release-1.10.0",
)

http_archive(
    name = "gflags",
    sha256 = "34af2f15cf7367513b352bdcd2493ab14ce43692d2dcd9dfc499492966c64dcf",
    strip_prefix = "gflags-2.2.2",
    urls = ["https://github.com/gflags/gflags/archive/v2.2.2.tar.gz"],
)

http_archive(
    name = "glog",
    sha256 = "21bc744fb7f2fa701ee8db339ded7dce4f975d0d55837a97be7d46e8382dea5a",
    strip_prefix = "glog-0.5.0",
    urls = ["https://github.com/google/glog/archive/v0.5.0.zip"],
)

http_archive(
     name = "benchmark",
     urls = ["https://github.com/google/benchmark/archive/v1.5.0.zip"],
     strip_prefix = "benchmark-v1.5.0",
)
