[tool.poetry]
name = "pabi-brain"
version = "0.0.1"
description = "Neural Network-based evaluation mechanism for chess engine"
authors = ["Kirill Bobyrev <kbobyrev.opensource@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.28"
optax = "^0.2.2"
chess = "^1.10.0"
tqdm = "^4.66.4"
aqtp = "^0.7.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["F", "E", "W"]
