[tool.poetry]
name = "pabi-tools"
version = "0.0.0"
description = "Tools for the Pabi engine"
authors = ["Kirill Bobyrev <kbobyrev@google.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
